fixed up request