@@ -7,8 +7,6 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 
 public class Request {
 
@@ -26,12 +24,13 @@ public class Request {
 
     public String makeRequest(){
         StringBuilder result = new StringBuilder();
+        System.out.println(instrumentID+"|"+topicCode+"|"+startDate+"|"+endDate);
         String query = "PREFIX w3: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n" +
                 "PREFIX fe: <http://adage.cse.unsw.edu.au/ontology/financial-events#>\n" +
                 "PREFIX ins: <http://adage.cse.unsw.edu.au/resource/financial-events#>\n" +
                 "PREFIX xs: <http://www.w3.org/2001/XMLSchema#>\n" +
                 "\n" +
-                "SELECT ?s ?id ?time ?headline ?newsBody \n" +
+                "SELECT ?s ?id ?time ?headline ?newsBody\n" +
                 "WHERE {\n" +
                 "?s w3:type fe:TRTHNewsEvent.\n" +
                 "?s fe:messageId ?id.\n" +
@@ -46,7 +45,7 @@ public class Request {
                 "FILTER (?ric = ins:RIC_"+instrumentID+")\n" +
                 "FILTER (?topicCode = \"N2:"+topicCode+"\")\n" +
                 "FILTER(xs:dateTime(?time) > "+startDate+"^^xs:dateTime && xs:dateTime(?time) <= "+endDate+"^^xs:dateTime)\n" +
-                "}LIMIT 2";
+                "}";
 
         /*Authenticator.setDefault (new Authenticator() {
             protected PasswordAuthentication getPasswordAuthentication() {
@@ -56,13 +55,15 @@ public class Request {
 
         try {
             String encodedQuery = URLEncoder.encode(query, "UTF-8");
-            String url = "http://adage.cse.unsw.edu.au:8005/v1/graphs/sparql?query=\""+encodedQuery+"\"";
+            String url = "http://adage.cse.unsw.edu.au:8005/v1/graphs/sparql?query="+encodedQuery;
             URL obj = new URL(url);
             HttpURLConnection conn = (HttpURLConnection) obj.openConnection();
-            String encoded = Base64.getEncoder().encodeToString(("student:studentML").getBytes(StandardCharsets.UTF_8));  //Java 8
-            conn.setRequestProperty("Authorization", "Basic "+encoded);
+            String userpass = "student:studentML";
+            String encoded = new sun.misc.BASE64Encoder().encode(userpass.getBytes());
+            conn.setRequestProperty("Authorization", "Basic " + encoded);
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/sparql-results+json");
+
             BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
             String line;
             while ((line = rd.readLine()) != null) {
